<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".AddJob">


    <EditText
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:inputType="date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_date"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/farmer_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="0dp" />

    <AutoCompleteTextView
        android:id="@+id/farmer_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_farmer"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        app:layout_constraintBottom_toTopOf="@+id/field_text"
        app:layout_constraintTop_toBottomOf="@+id/date_text"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/field_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_field"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        app:layout_constraintBottom_toTopOf="@+id/product_text"
        app:layout_constraintTop_toBottomOf="@+id/farmer_text"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="0dp" />

    <AutoCompleteTextView
        android:id="@+id/product_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_product"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        app:layout_constraintBottom_toTopOf="@+id/acres_text"
        app:layout_constraintTop_toBottomOf="@+id/field_text"
        app:layout_constraintVertical_bias="0.118"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/acres_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_acres"
        android:inputType="number"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#80000000"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/product_text"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:text="@string/button_add_text"
        android:textSize="18sp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acres_text" />

</androidx.constraintlayout.widget.ConstraintLayout>